[package]
name = "aldrin-proto"
description = "Protocol definitions of Aldrin, a lightweight and composable RPC framework."
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"

[features]
fuzzing = [
    "dep:arbitrary",
    "uuid/arbitrary",
]
macros = ["dep:aldrin-proto-macros"]
new-v4-ids = ["uuid/v4"]
tokio = ["dep:tokio"]

[dependencies.aldrin-proto-macros]
optional = true
version = "0.1.0"
path = "../proto-macros"
default-features = false

[dependencies.arbitrary]
optional = true
version = "1.2.0"
default-features = false
features = ["derive"]

[dependencies.bytes]
version = "1.2.1"
default-features = false

[dependencies.num_enum]
version = "0.6.1"
default-features = false

[dependencies.pin-project-lite]
version = "0.2.9"
default-features = false

[dependencies.tokio]
optional = true
version = "1.27.0"
default-features = false

[dependencies.uuid]
version = "1.2.1"
default-features = false
