[package]
name = "aldrin-test"
description = "Utilities for Aldrin server and client tests."
version = "0.2.0"
authors = ["Aldrin Contributors"]
repository = "https://github.com/dennis-hamester/aldrin"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
categories = [
    "asynchronous",
    "network-programming",
]
keywords = [
    "async",
    "network",
    "rpc",
    "service",
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
tokio = ["dep:tokio"]

[dependencies.aldrin]
version = "0.2.0"
path = "../aldrin"
default-features = false

[dependencies.aldrin-broker]
version = "0.2.0"
path = "../broker"
default-features = false

[dependencies.aldrin-core]
version = "0.2.0"
path = "../core"
default-features = false
features = ["channel"]

[dependencies.futures-util]
version = "0.3.29"
default-features = false

[dependencies.tokio]
optional = true
version = "1.34.0"
default-features = false
features = ["rt"]

[dev-dependencies]
anyhow = "1.0.75"

[dev-dependencies.aldrin]
path = "../aldrin"
features = ["codegen"]

[dev-dependencies.futures]
version = "0.3.29"
default-features = false

[dev-dependencies.tokio]
version = "1.34.0"
features = [
    "macros",
    "rt-multi-thread",
    "time",
]
