[package]
name = "aldrin-test"
description = "Utilities for Aldrin server and client tests."
version = "0.11.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
tokio = ["dep:tokio"]

[lints]
workspace = true

[dependencies]
futures-util = { workspace = true }

[dependencies.aldrin]
version = "0.11.0"
path = "../aldrin"
default-features = false

[dependencies.aldrin-broker]
version = "0.11.0"
path = "../broker"
default-features = false

[dependencies.aldrin-core]
version = "0.11.0"
path = "../core"
default-features = false
features = ["channel"]

[dependencies.tokio]
workspace = true
optional = true
features = ["rt"]

[dev-dependencies]
anyhow = { workspace = true }

[dev-dependencies.aldrin]
path = "../aldrin"
default-features = false
features = ["codegen"]

[dev-dependencies.tokio]
workspace = true
features = [
    "macros",
    "rt-multi-thread",
    "time",
]
