[package]
name = "aldrin-broker-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[features]
introspection = ["aldrin-broker/introspection"]

[dependencies]
libfuzzer-sys = "0.4.10"

[dependencies.aldrin-broker]
path = "../../broker"
features = [
    "channel",
    "statistics",
]

[dependencies.aldrin-core]
path = "../../core"
features = ["fuzzing"]

[dependencies.arbitrary]
version = "1.4.2"
features = ["derive"]

[dependencies.uuid]
version = "1.19.0"
features = ["arbitrary"]

[profile.release]
codegen-units = 1
debug = true
debug-assertions = true
overflow-checks = true

[[bin]]
name = "broker"
path = "fuzz_targets/broker.rs"
test = false
doc = false
