[package]
name = "aldrin-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
bytes = "1.5.0"
libfuzzer-sys = "0.4.7"

[dependencies.aldrin-core]
path = ".."
features = ["fuzzing"]

[profile.release]
debug = 1
debug-assertions = true
overflow-checks = true

[[bin]]
name = "deserialize-skip"
path = "fuzz_targets/deserialize_skip.rs"
test = false
doc = false

[[bin]]
name = "message-deserialize"
path = "fuzz_targets/message_deserialize.rs"
test = false
doc = false

[[bin]]
name = "message-serialize"
path = "fuzz_targets/message_serialize.rs"
test = false
doc = false

[[bin]]
name = "packetizer-extend-from-slice"
path = "fuzz_targets/packetizer_extend_from_slice.rs"
test = false
doc = false

[[bin]]
name = "packetizer-spare-capacity-mut"
path = "fuzz_targets/packetizer_spare_capacity_mut.rs"
test = false
doc = false

[[bin]]
name = "value-deserialize"
path = "fuzz_targets/value_deserialize.rs"
test = false
doc = false

[[bin]]
name = "value-serialize"
path = "fuzz_targets/value_serialize.rs"
test = false
doc = false
