[package]
name = "example-broker"
version = "0.0.0"
edition = "2021"
publish = false

[features]
introspection = ["aldrin-broker/introspection"]
statistics = ["aldrin-broker/statistics"]

[dependencies]
anyhow = "1.0.75"

[dependencies.aldrin-broker]
path = "../../broker"
features = ["tokio"]

[dependencies.clap]
version = "4.4.8"
features = ["derive"]

[dependencies.tokio]
version = "1.34.0"
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "time",
]
