[package]
name = "example-broker"
version = "0.0.0"
edition = "2021"
publish = false

[features]
introspection = ["aldrin-broker/introspection"]
statistics = ["aldrin-broker/statistics"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dependencies.aldrin-broker]
workspace = true
features = ["tokio"]

[dependencies.tokio]
workspace = true
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "time",
]
