[package]
name = "example-broker"
version = "0.0.0"
edition = "2021"
publish = false

[features]
introspection = ["aldrin-broker/introspection"]
statistics = ["aldrin-broker/statistics"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dependencies.aldrin-broker]
path = "../../broker"
default-features = false
features = ["tokio"]

[dependencies.tokio]
workspace = true
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "time",
]
