[package]
name = "example-downloader"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
introspection = ["aldrin/introspection"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dependencies.aldrin]
path = "../../aldrin"
default-features = false
features = [
    "macros",
    "new-v4-ids",
    "tokio",
]

[dependencies.sha2]
version = "0.10.8"
default-features = false

[dependencies.tokio]
workspace = true
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
]
