[package]
name = "example-echo"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"
uuid = "1.6.1"

[dependencies.aldrin]
path = "../../aldrin"
features = [
    "codegen",
    "new-v4-ids",
    "tokio",
]

[dependencies.clap]
version = "4.4.8"
features = ["derive"]

[dependencies.tokio]
version = "1.34.0"
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
]
