[package]
name = "example-introspect"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["introspection"]
introspection = ["aldrin/introspection"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dependencies.aldrin]
workspace = true
features = ["tokio"]

[dependencies.tokio]
workspace = true
features = [
    "macros",
    "net",
    "rt-multi-thread",
]
