[package]
name = "example-introspect"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["introspection"]
introspection = ["aldrin/introspection"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dependencies.aldrin]
path = "../../aldrin"
default-features = false
features = ["tokio"]

[dependencies.tokio]
workspace = true
features = [
    "macros",
    "net",
    "rt-multi-thread",
]
