[package]
name = "aldrin-examples"
version = "0.0.0"
authors = ["Dennis Hamester <dennis.hamester@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[dependencies]
aldrin-broker = { path = "../../rust/broker" }
aldrin-client = { path = "../../rust/client" }
aldrin-util = { path = "../../rust/util" }
tokio = { version = "0.2.4", default-features = false }

[dev-dependencies]
aldrin-proto = { path = "../../rust/proto" }
futures = { version = "0.3.1", default-features = false }
tokio = { version = "0.2.4", default-features = false, features = [ "rt-core", "macros" ] }
uuid = { version = "0.8.1", default-features = false, features = [ "v4" ] }
