[package]
name = "aldrin"
description = "Lightweight and composable RPC framework."
version = "0.1.0"
authors = ["Dennis Hamester <dennis.hamester@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
futures-channel = { version = "0.3.1", default-features = false, features = [ "std", "sink" ] }
futures-core = { version = "0.3.1", default-features = false }
futures-sink = { version = "0.3.1", default-features = false }
futures-util = { version = "0.3.1", default-features = false, features = [ "sink" ] }
uuid = { version = "0.8.1", default-features = false }
