[package]
name = "aldrin"
description = "Lightweight and composable RPC framework."
version = "0.1.0"
authors = ["Dennis Hamester <dennis.hamester@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
aldrin-proto = { version = "0.1.0", path = "../proto" }
aldrin-transport = { version = "0.1.0", path = "../transport" }
futures-channel = { version = "0.3.1", default-features = false, features = [ "std", "sink" ] }
futures-core = { version = "0.3.1", default-features = false }
futures-util = { version = "0.3.1", default-features = false, features = [ "sink" ] }
uuid = { version = "0.8.1", default-features = false }
