[package]
name = "aldrin-broker"
description = "Broker library of Aldrin, a lightweight and composable RPC framework."
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "Apache-2.0"
edition = "2021"

[features]
statistics = []

[dependencies]
aldrin-proto = { version = "0.1.0", path = "../proto", features = ["new-v4-ids"] }
futures-channel = { version = "0.3.21", default-features = false, features = ["sink", "std"] }
futures-core = { version = "0.3.21", default-features = false }
futures-util = { version = "0.3.21", default-features = false, features = ["sink"] }

[dev-dependencies]
aldrin-channel = { version = "0.1.0", path = "../channel" }
aldrin-client = { version = "0.1.0", path = "../client" }
aldrin-codec = { version = "0.1.0", path = "../codec", features = ["json-serializer", "tokio-codec"] }
aldrin-test = { version = "0.1.0", path = "../test", features = ["tokio"] }
anyhow = "1.0.32"
tokio = { version = "1.0.0", features = ["macros", "net", "rt-multi-thread", "time"] }
