[package]
name = "aldrin-broker"
description = "Broker library of Aldrin, a lightweight and composable RPC framework."
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.64.0"

[features]
statistics = []

[dependencies.aldrin-proto]
version = "0.1.0"
path = "../proto"
default-features = false
features = ["new-v4-ids"]

[dependencies.futures-channel]
version = "0.3.21"
default-features = false
features = [
    "sink",
    "std",
]

[dependencies.futures-core]
version = "0.3.21"
default-features = false

[dependencies.futures-util]
version = "0.3.21"
default-features = false
features = ["sink"]

[dev-dependencies]
anyhow = "1.0.32"

[dev-dependencies.aldrin-channel]
version = "0.1.0"
path = "../channel"

[dev-dependencies.aldrin-client]
version = "0.1.0"
path = "../client"

[dev-dependencies.aldrin-codec]
version = "0.1.0"
path = "../codec"
features = [
    "json",
    "tokio-codec",
]

[dev-dependencies.aldrin-test]
version = "0.1.0"
path = "../test"
features = ["tokio"]

[dev-dependencies.tokio]
version = "1.0.0"
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
]
