[package]
name = "aldrin-channel"
description = "Channels-based Aldrin transports"
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "Apache-2.0"
edition = "2018"
autobenches = false

[dependencies]
aldrin-proto = { version = "0.1.0", path = "../proto" }
futures-channel = "0.3.4"
futures-core = "0.3.4"

[dev-dependencies]
aldrin-broker = { version = "0.1.0", path = "../broker" }
aldrin-client = { version = "0.1.0", path = "../client" }
futures = { version = "0.3.4", default-features = false }
tokio = { version = "0.3.3", features = ["macros", "rt-multi-thread"] }
