[package]
name = "aldrin-channel"
description = "Channels-based Aldrin transports"
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "Apache-2.0"
edition = "2021"
autobenches = false

[dependencies]
aldrin-proto = { version = "0.1.0", path = "../proto" }
futures-channel = "0.3.21"
futures-core = "0.3.21"

[dev-dependencies]
aldrin-broker = { version = "0.1.0", path = "../broker" }
aldrin-client = { version = "0.1.0", path = "../client" }
futures = { version = "0.3.21", default-features = false }
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
