[package]
name = "aldrin-client"
description = "Client library of Aldrin, a lightweight and composable RPC framework."
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "Apache-2.0"
edition = "2018"

[features]
codegen = ["aldrin-codegen-macros"]

[dependencies]
aldrin-proto = { version = "0.1.0", path = "../proto", features = ["new-v4-ids"] }
futures-channel = { version = "0.3.21", default-features = false, features = ["std"] }
futures-core = { version = "0.3.21", default-features = false }
futures-util = { version = "0.3.21", default-features = false }
uuid = { version = "1.1.2", default-features = false, features = ["v4"] }

aldrin-codegen-macros = { optional = true, version = "0.1.0", path = "../codegen-macros" }

[dev-dependencies]
aldrin-channel = { version = "0.1.0", path = "../channel" }
aldrin-test = { version = "0.1.0", path = "../test", features = ["tokio"] }
futures = { version = "0.3.21", default-features = false }
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread", "time"] }
